2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (grub_keyboard_getkey): Silence spurious
	warning.
	Reported and tested by: Grégoire Sutre.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Do CPU substitution even if it's specified explicitly.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (rs_decoder.S): Force compilation with -Os.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Satisfy some bison versions need for inttypes.h.

	* grub-core/lib/posix_wrap/inttypes.h: New file.
	* grub-core/lib/posix_wrap/sys/types.h (int8_t): New type.
	(int16_t): Likewise.
	(int32_t): Likewise.
	(int64_t): Likewise.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_netbsd_load_elf_meta):
	Silence spurious warning.
	Reported and tested by: Alain Greppin.

2011-01-07  Szymon Janc <szymon@janc.net.pl>

	* docs/grub.texi (Support automatic decompression): Update with xz
	decompression support.

2011-01-07  Szymon Janc <szymon@janc.net.pl>

	Improve loaders' kernel command line handling.

	* grub-core/lib/cmdline.c: New file.
	* include/grub/lib/cmdline.h: Likewise.
	* grub-core/loader/i386/linux.c (grub_cmd_linux): Use
	grub_create_loader_cmdline to create kernel command line.
	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Likewise.
	* grub-core/loader/powerpc/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* grub-core/loader/sparc64/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* grub-core/Makefile.core.def (linux16): Add lib/cmdline.c on i386_pc.
	(linux): Add lib/cmdline.c on common.

2011-01-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_iterate_dir): Take into account that
	inopos might be unaligned.

2011-01-07  Vladimir Serbinenko  <phcoder@gmail.com>
